--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "pimple/pimple": "^3.2",
         "tightenco/collect": "^5.6",
-        "doctrine/cache": "^1.7"
+        "doctrine/cache": "^1.7",
+        "monolog/monolog": "^1.23"
     },
     "autoload":{
     	"psr-4" :{
