--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "pimple/pimple": "^3.2",
         "tightenco/collect": "^5.6",
         "doctrine/cache": "^1.7",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "dancesmile/dttp": "^1.0"
     },
     "autoload":{
     	"psr-4" :{
